// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-copy-to-clipboard custom 1`] = `
<div>
  <div
    class="m-textfield m--is-readonly m--has-label m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-readonly m--is-label-up m--has-label m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <label
          class="m-input-style__label"
          for="mTextfield-uuid"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              some label
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__body"
        >
          <!---->
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              readonly="readonly"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <button
    class="m-button m--is-skin-secondary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Custom Copy Button 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
</div>
`;

exports[`Storyshots components|m-copy-to-clipboard default 1`] = `
<div>
  <div
    class="m-textfield m--is-readonly m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-readonly m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              readonly="readonly"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Copy 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
</div>
`;

exports[`Storyshots components|m-copy-to-clipboard default with value 1`] = `
<div>
  <div
    class="m-textfield m--is-readonly m--is-type-text"
    style="width: 100%; max-width: 288px;"
  >
    <div
      class="m-input-style m--is-readonly m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__content"
        style="margin-top: 10px;"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__body"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__left-content"
          >
            <input
              class="m-textfield__input"
              id="mTextfield-uuid"
              maxlength="Infinity"
              readonly="readonly"
              type="text"
            />
              
            <!---->
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__right-content"
          >
            <span
              style="white-space: nowrap;"
            />
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-textfield__validation"
    >
      <div
        class="m-validation-message m-textfield__validation__message"
      >
        <!---->
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Copy 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
</div>
`;
